2001-05-05  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-status-show-buffer): Change name of buffer to "*Status*".

2001-05-02  Steve Youngs  <youngs@xemacs.org>

	* Makefile (AUTO_PRELOADS): New.

2001-04-28  Steve Youngs  <youngs@xemacs.org>

	* Version 0.2.13 released.

	* eicq.el (eicq-message-sound): Removed, put into alist.
	(eicq-chat-sound): Ditto.
	(eicq-url-sound): Ditto.
	(eicq-buddy-sound): Ditto.
	(eicq-auth-sound): Ditto.
	(eicq-emailx-sound): Ditto.
	(eicq-pager-sound): Ditto.
	(eicq-sound-alist): New.
	(eicq-use-sound-flag): New.
	(eicq-do-message-helper): Use 'eicq-sound-alist', 'eicq-use-sound-flag'.
	(eicq-do-online): Ditto.
	(eicq-log-buddy-message): Run 'smiley-buffer' and 'goto-address'.


2001-04-22  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-buddy-show-buffer): Rename and rearrange status widgets.
	(eicq-status-window-height): New.
	(eicq-status-buffer): New.
	(eicq-status-show-buffer): New.
	(eicq-show-window): Show the status buffer as well.
	(eicq-disconnect): Kill the status buffer.
	(eicq-switch-to-buddy-buffer): New.

	* eicq-toolbar.el: Reduced the number of tools on the toolbar.

2001-04-21  Steve Youngs  <youngs@xemacs.org>

	* Version 0.2.12 released.

	* eicq-toolbar.el (eicq-toolbar-disconnect): Do 'eicq-logout' before
	'eicq-disconnect'.
	(eicq-buddy-toolbar): Remove.  Use the same toolbar for both the 
	buddy and log buffers.
	(eicq-install-buddy-toolbar): Use the log toolbar.

	* eicq.el (eicq-do-login-confirm): Run 'eicq-show-window'.
	(eicq-disconnect): Kill the Eicq buffers.
	(eicq-log-mode): Load both the log menu and the buddy menu.
	(eicq-buddy-mode): Ditto.

2001-04-01  Steve Youngs  <youngs@xemacs.org>

	* README: Added section about submitting patches.

2001-03-21  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-log-next-unread): Make it interactive.
	(eicq-log-previous-unread): Ditto.

2001-03-19  Steve Youngs  <youngs@xemacs.org>
